--- a/static/styles/base/base.less
+++ b/static/styles/base/base.less
@@ -17,5 +17,6 @@
 @import 'page.less';
 @import 'pagination.less';
 @import 'posts.less';
+@import 'pretty.less';
 @import 'site.less';
 @import 'tables.less';
