Eliminate the posts_admin view because it's shit
posts_view is up next. We will also be getting rid of Database.php, as
the idea of a centralised class for every database action was silly (but
at least it wasn't mine).

From now on, SQL queries will be treated as "first-class citizens" and
gradually moved to services/views/whatever as appropriate. This makes
sense because the same SQL queries are rarely used in more than one
place.

--- a/templates/includes/macros.html
+++ b/templates/includes/macros.html
@@ -109,16 +109,18 @@
 {% endmacro %}
 
 {% macro reports(reports) %}
-  <div class="post-reports">
-    <ul>
-      {% for report in reports|json_decode(true) %}
-        <li>
-          Reported by <a href="{{ path("ip/"~report.ip, true) }}">{{ report.ip }}</a>: <strong class="reason">{{ report.reason }}</strong>
-          <span class="dismiss">(<a href="{{ path("reports", {"dismiss": report.id}) }}" title="Dismiss">Dismiss</a>)</span>
-        </li>
-      {% endfor %}
-    </ul>
-  </div>
+  {% if reports %}
+    <div class="post-reports">
+      <ul>
+        {% for report in reports %}
+          <li>
+            Reported by <a href="{{ path("ip/"~report.ip, true) }}">{{ report.ip }}</a>: <strong class="reason">{{ report.reason }}</strong>
+            <span class="dismiss">(<a href="{{ path("reports", {"dismiss": report.id}) }}" title="Dismiss">Dismiss</a>)</span>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+  {% endif %}
 {% endmacro %}
 
 {% macro body(context, p) %}
@@ -140,8 +142,8 @@
         </p>
       {% endif %}
 
-      {% if p.reports %}
-        {{ m.reports(p.reports) }}
+      {% if context.admin %}
+        {{ m.reports(p.getReports()) }}
       {% endif %}
     </footer>
   </div>
